double cart fixed. cart visible in all pages.

--- a/style.css
+++ b/style.css
@@ -11,3 +11,8 @@
     width: 200px;
 }
 
+#counter{
+    font-size: medium;
+    font-style: normal;
+}
+
